samples/_failures_safe/1761165154_43d604_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58b110f7.c: In function ‘main’:
./samples/SAFE/__tmp_58b110f7.c:138:5: error: expected declaration or statement at end of input
  138 |     while (entry_count < MAX_ENTRIES) {
      |     ^~~~~
./samples/SAFE/__tmp_58b110f7.c:138:5: error: expected declaration or statement at end of input
